# environment-interference

./: .gitignore  README.md  pyproject.toml
environment_interference/: __init__.py  cli.py  collect.py  metrics.py  models.py  parse.py  radio.py  report.py  series.py
scripts/: run_environment_report.sh
tests/: test_cli.py  test_metrics.py  test_parse.py  test_series.py
tests/fixtures/: sample_nmcli_scan.txt  sample_scan.txt  sample_survey.txt
