[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "environment-interference"
version = "0.1.0"
description = "Local 2.4 GHz and 5 GHz Wi-Fi interference survey and reporting toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Volodymyr Pavlenko" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
env-interference = "environment_interference.cli:main"

[tool.setuptools]
packages = ["environment_interference"]

